// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AreaChart ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-106ovip-MuiGrid-root"
  >
    <div
      class="recharts-responsive-container"
      style="width: 100%; height: 400px; min-width: 0;"
    />
  </div>
</div>
`;

exports[`AreaChart ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-106ovip-MuiGrid-root"
  >
    <div
      class="recharts-responsive-container"
      style="width: 100%; height: 400px; min-width: 0;"
    />
  </div>
</div>
`;

exports[`AreaChart ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-106ovip-MuiGrid-root"
  >
    <div
      class="recharts-responsive-container"
      style="width: 100%; height: 400px; min-width: 0;"
    />
  </div>
</div>
`;

exports[`AreaChart ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-106ovip-MuiGrid-root"
  >
    <div
      class="recharts-responsive-container"
      style="width: 100%; height: 400px; min-width: 0;"
    />
  </div>
</div>
`;

exports[`AreaChart ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-106ovip-MuiGrid-root"
  >
    <div
      class="recharts-responsive-container"
      style="width: 100%; height: 400px; min-width: 0;"
    />
  </div>
</div>
`;

exports[`AreaChart ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-hlhsal-MuiGrid-root"
  >
    <div
      class="recharts-responsive-container"
      style="width: 100%; height: 400px; min-width: 0;"
    />
  </div>
</div>
`;
